Allow .apk build files

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,10 @@ out/
 
 # Gradle files
 .gradle/
-build/
-/*/build/
+#build/
+/*/build/intermediates/
+/*/build/generated/
+/*/build/outputs/logs/
 
 # Local configuration file (sdk path, etc)
 local.properties
