--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         android:hardwareAccelerated="true"
         android:largeHeap="true"
         android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
         android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name=".DeviceScanActivity"
